yml/golang.yml
apiVersion: v1
kind: Pod
metadata:
  name: golang-pod
  labels:
    name: golan-pod
    context: docker-k8s-lab
spec:
  containers: 
    - 
      name: golang
      image: harbor.caas.pez.pivotal.io/caas-workshop/golang:1.9.1-alpine3.6
      ports: 
        - 
          containerPort: 80
  imagePullSecrets:
    - name: regsecret
