yml/mysql-harbor.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    name: mysql-pod
    context: docker-k8s-lab
spec:
  containers: 
    - 
      name: mysql
      image: harbor.caas.pez.pivotal.io/caas-workshop/mysql:latest
      ports: 
        - 
          containerPort: 3306
  imagePullSecrets:
    - name: regsecret
