yml/np-allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-services
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: guestbook
